--- a/.eslintrc
+++ b/.eslintrc
@@ -8,8 +8,8 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "semi": "off",
-    "@typescript-eslint/semi": "error",
+    "semi": [ "error", "never" ],
+    "@typescript-eslint/semi": ["error", "never"],
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"]
   }
