--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/server.js",
+    "build": "tsup src --minify",
+    "dev": "tsx watch src/server.ts",
+    "seed": "tsx src/seeds/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +18,11 @@
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
+    "@types/cors": "^2.8.15",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.20",
+    "@types/helmet": "^4.0.0",
+    "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.10",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
@@ -22,6 +33,18 @@
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
     "prettier": "^3.0.3",
+    "prisma": "^5.5.2",
+    "tsup": "^7.2.0",
+    "tsx": "^3.14.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.5.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0"
   }
 }
